--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
-body{
-    background-color: gray;
+.square {
+    width: 200px;
+    height: 200px;
+    border: 10px violet solid;
+    display: inline-block;
+}
+
+img {
+    display: block;
 }
